--- a/practiceabout.html
+++ b/practiceabout.html
@@ -11,7 +11,7 @@
 <header>
     <nav>
         <ul>
-            <li class="home"><a href="practice.html">HOME</a></li>
+            <li class="home"><a href="index.html">HOME</a></li>
             <li><a href="practicecontact.html">CONTACT</a></li>
             <li><a href="practiceabout.html">ABOUT</a></li>
             <li><a href="practicework.html">WORK</a></li>
