--- a/practiceabout.html
+++ b/practiceabout.html
@@ -22,7 +22,7 @@
 <p class="shift-r">Currently reading:</p>
 <a href="https://www.gutenberg.org/files/32/32-h/32-h.htm"><img src="images/herland.jpeg" alt="Book cover of Herland by Charlotte Gilman"></a>
 <p class="shift-r">Currently listening to:</p>
-<a href="https://www.amazon.com/Almost-Killed-Me-Hold-Steady/dp/B000NOKEUE"><img src="images/holdsteady.jpg" alt="Album cover of Almost Killed Me by Hold Steady"></a>
+<a href="https://www.amazon.com/Almost-Killed-Me-Hold-Steady/dp/B000NOKEUE"><img src="images/holdsteady.jpeg" alt="Album cover of Almost Killed Me by Hold Steady"></a>
 <br/><br/><br/>
 <footer> &copy; 2018 Jess McCauley</footer>
 </body>
