--- a/practicework.html
+++ b/practicework.html
@@ -21,22 +21,22 @@
 </header>
 <h3>Yahoo</h3>
 <p class="shift-r">User research, interaction design, information architecture</p>
-<img src="" alt=""></a>
+<img src="images/yahoo.jpeg" alt="newspapers"></a>
 <h3>Grektek</h3>
 <p class="shift-r">Interaction design, business strategy, visual design</p>
-<img src="" alt=""></a>
+<img src="images/grektek.jpeg" alt="doctor and patient"></a>
 <h3>Grand Hotel</h3>
 <p class="shift-r">Ethnographic research, experience design, business strategy</p>
-<img src="" alt=""></a>
+<img src="images/grand.jpeg" alt="viewfinder"></a>
 <h3>University of Michigan</h3>
 <p class="shift-r">Ethnographic research, LX design, organizational strategy</p>
-<img src="" alt=""></a>
+<img src="images/uofm.jpeg" alt="classroom"></a>
 <h3>Conceptual</h3>
 <p class="shift-r">Ideation, trendspotting, prototyping</p>
-<img src="" alt=""></a>
+<img src="images/concept.jpeg" alt="space"></a>
 <h3>In Progress - Fall 2018</h3>
 <p class="shift-r">A sneak peek into what I’m working on right now</p>
-<img src="" alt=""></a>
+<img src="images/inprogress.jpeg" alt=""></a>
 <br/><br/><br/>
 <footer> &copy; 2018 Jess McCauley</footer>
 </body>
