--- a/practicework.html
+++ b/practicework.html
@@ -33,10 +33,10 @@
 <img src="images/uofm.jpeg" alt="classroom"></a>
 <h3>Conceptual</h3>
 <p class="shift-r">Ideation, trendspotting, prototyping</p>
-<img src="images/concept.jpeg" alt="space"></a>
+<img src="images/concept.jpeg" alt="person looking into sun"></a>
 <h3>In Progress - Fall 2018</h3>
 <p class="shift-r">A sneak peek into what I’m working on right now</p>
-<img src="images/inprogress.jpeg" alt=""></a>
+<img src="images/inprogress.jpeg" alt="two days to launch"></a>
 <br/><br/><br/>
 <footer> &copy; 2018 Jess McCauley</footer>
 </body>
