--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" class="home-bg">
+<html lang="en" class="homebg">
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" type="text/css" href="css/practicestyle.css">
@@ -24,3 +24,4 @@
 <footer> &copy; 2018 Jess McCauley </footer>
 </body>
 </html>
+
