--- a/practicecontact.html
+++ b/practicecontact.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" class="contact-bg">
+<html lang="en" class="pagebg">
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" type="text/css" href="css/practicestyle.css">
