--- a/practiceabout.html
+++ b/practiceabout.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" class="about-bg">
+<html lang="en" class="pagebg">
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" type="text/css" href="css/practicestyle.css">
@@ -27,3 +27,4 @@
 <footer> &copy; 2018 Jess McCauley</footer>
 </body>
 </html>
+
