--- a/practicecontact.html
+++ b/practicecontact.html
@@ -17,9 +17,9 @@
             <li><a href="practicework.html">WORK</a></li>
         </ul>
     </nav>
-<h2>CONTACT</h2>
+    <h2>CONTACT</h2>
 </header>
-<p class='contact-p'>you ready to do this?<br/>jssmccly@umich.edu</p>
+<p class="contact-p">you ready to do this?<br/>jssmccly@umich.edu</p>
 <br/><br/><br/><br/><br/><br/>
 <footer> &copy; 2018 Jess McCauley</footer>
 </body>
