--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <li><a href="practicework.html">WORK</a></li>
         </ul>
     </nav>
-    <h1>Hi, <br/>I'm <a href="practiceabout.html" color=#111>Jess</a></h1>
+    <h1>Hi, <br/>I'm <a href="practiceabout.html">Jess</a></h1>
 </header>
 <h3>experience designer<br/>ann arbor, michigan</h3>
 <br/><br/><br/>
